--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>header</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https:/fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="image/logo.png">
 </head>
 <body>
     <!-- Header -->
@@ -15,14 +15,15 @@
     <header>
         <nav>
             <ul class="brand">
-                <li><img src="logo.png" height="35px" alt="logo"> 
+                <li><img src="image/logo.png" height="35px" alt="logo"> 
                 <span>Kintamani <b>Baangli</b></span></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Objek wisata</a></li>
                 <li><a href="#">Sarana Akomodasi</a></li>
                 <li><a href="#">Wawasan</a></li>
-                <li><input type="search" placeholder="Search....">
-                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <li><input type="search" name="cari" placeholder="  pencarian">
+                <a href="#" class="btn-cari">
+                <button><i class="material-icons" style="font-size:20px">search</i></button></a></li>
             </ul>
         </nav>
     </header>
@@ -67,13 +68,13 @@
                 <a class="link-img"><i class="material-icons" style="font-size:36px">play_circle_filled</i></a>
             </div>
             <div class="gambar">
-                <img src="cover1.jpg" class="gambarobjek">
+                <img src="image/cover1.jpg" class="gambarobjek">
                 <p class="title">Gambar Ulundanu Batur</p>
             </div>
         </div>
         <div class="objekwisata">
             <div class="gambar">
-                <img src="cover2.jpg" class="gambarobjek">
+                <img src="image/cover2.jpg" class="gambarobjek">
             </div>
             <div class="isian">
                 <h1><u>Kintamani Bangli</u></h1>
@@ -100,7 +101,7 @@
     <div class="kolom">
         <h2 style="text-align: center">Panorama Objek Wisata</h2>
         <div class="card">
-            <img src="pinggan.jpg" alt="Kintamani" style="width: 100%;border-radius:
+            <img src="image/pinggan.jpg" alt="Kintamani" style="width: 100%;border-radius:
             10px ;">
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
@@ -114,7 +115,7 @@
         </div>
         <h2 style="text-align: center;">Hotel dan Villa</h2>
         <div class="card">
-            <img src="hotel.jpeg" alt="Kintamani" style="width: 100%; border-radius: 10
+            <img src="image/hotel.jpeg" alt="Kintamani" style="width: 100%; border-radius: 10
             px;">
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
@@ -128,7 +129,7 @@
         </div>
         <h2 style="text-align: center;">Restaurant</h2>
         <div class="card">
-            <img src="Makanan.jpg" alt="Kintamani" style="width:100% ; border-radius: 10px
+            <img src="image/Makanan.jpg" alt="Kintamani" style="width:100% ; border-radius: 10px
             ;">
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
             <i class="material-icons" style="font-size: 23px;color:yellow;">star_rate</i>
